erDiagram
    personnel {
        bigint id PK "AUTO_INCREMENT"
        varchar fname "NOT NULL"
        varchar mname
        varchar lname "NOT NULL"
        varchar contactnum "NOT NULL"
        varchar avatar
        varchar username "NOT NULL, UNIQUE"
        varchar password "NOT NULL"
        varchar position "NOT NULL"
        varchar agency "NOT NULL"
        tinyint status "DEFAULT 1 (1=active, 0=inactive)"
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
        varchar remember_token
    }

    pdl {
        bigint id PK "AUTO_INCREMENT"
        varchar fname "NOT NULL"
        varchar lname "NOT NULL"
        varchar alias
        date birthdate
        int age
        enum gender "Male, Female"
        varchar ethnic_group
        enum civil_status "Single, Married, Widowed, Divorced"
        varchar brgy
        varchar city
        varchar province
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
        bigint personnel_id FK "NOT NULL"
    }

    cells {
        bigint cell_id PK "AUTO_INCREMENT"
        varchar cell_name "NOT NULL"
        int capacity "NOT NULL"
        varchar description
        varchar status "DEFAULT 'active'"
        timestamp created_at
        timestamp updated_at
    }

    cell_assignments {
        bigint assignment_id PK "AUTO_INCREMENT"
        bigint cell_id FK "NOT NULL"
        bigint pdl_id FK "NOT NULL"
        timestamp created_at
        timestamp updated_at
    }

    case_information {
        bigint case_id PK "AUTO_INCREMENT"
        varchar case_number "NOT NULL, UNIQUE"
        varchar crime_committed "NOT NULL"
        date date_committed "NOT NULL"
        varchar time_committed "NOT NULL"
        varchar case_status "NOT NULL"
        varchar case_remarks
        bigint pdl_id FK "NOT NULL"
        varchar security_classification
        timestamp created_at
        timestamp updated_at
    }

    court_orders {
        bigint court_order_id PK "AUTO_INCREMENT"
        varchar court_order_number "NOT NULL, UNIQUE"
        varchar order_type "NOT NULL"
        date order_date "NOT NULL"
        date received_date
        varchar remarks
        varchar document_type
        varchar court_branch "NOT NULL"
        bigint pdl_id FK "NOT NULL"
        timestamp created_at
        timestamp updated_at
    }

    medical_records {
        bigint medical_record_id PK "AUTO_INCREMENT"
        bigint pdl_id FK "NOT NULL"
        varchar complaint "NOT NULL"
        date date "NOT NULL"
        text prognosis
        text laboratory
        text prescription
        text findings
        timestamp created_at
        timestamp updated_at
    }

    physical_characteristics {
        bigint characteristic_id PK "AUTO_INCREMENT"
        double height
        double weight
        varchar build
        varchar complexion
        varchar hair_color
        varchar eye_color
        varchar identification_marks
        varchar mark_location
        varchar remark
        bigint pdl_id FK "NOT NULL"
        timestamp created_at
        timestamp updated_at
    }

    activity {
        bigint activity_id PK "AUTO_INCREMENT"
        varchar category "NOT NULL"
        varchar activity_name "NOT NULL"
        date activity_date "NOT NULL"
        time activity_time "NOT NULL"
        timestamp created_at
        timestamp updated_at
        bigint pdl_id FK "NOT NULL"
    }

    time_allowances {
        bigint id PK "AUTO_INCREMENT"
        bigint pdl_id FK "NOT NULL"
        enum type "gcta, tastm, NOT NULL"
        int days "NOT NULL"
        text reason "NOT NULL"
        bigint awarded_by FK "NOT NULL"
        timestamp awarded_at "NOT NULL"
        timestamp created_at
        timestamp updated_at
    }

    system_notifications {
        bigint notification_id PK "AUTO_INCREMENT"
        varchar title "NOT NULL"
        text message "NOT NULL"
        bigint personnel_id FK "NOT NULL"
        bigint pdl_id FK "NOT NULL"
        timestamp created_at
        timestamp updated_at
    }

    system_notifications_read_by {
        bigint id PK "AUTO_INCREMENT"
        bigint notification_id FK "NOT NULL"
        bigint personnel_id FK "NOT NULL"
    }

    verifications {
        bigint verification_id PK "AUTO_INCREMENT"
        varchar reason "NOT NULL"
        bigint personnel_id FK "NOT NULL"
        bigint pdl_id FK "NOT NULL"
        varchar status "DEFAULT 'pending'"
        timestamp created_at
        timestamp updated_at
        text feedback
        bigint reviewed_by FK
        timestamp reviewed_at
    }

    %% Relationships
    personnel ||--o{ pdl : "manages"
    pdl }o--|| personnel : "managed by"

    cells ||--o{ cell_assignments : "contains"
    cell_assignments }o--|| cells : "located in"
    pdl ||--o{ cell_assignments : "assigned to"
    cell_assignments }o--|| pdl : "assignment for"

    pdl ||--o{ case_information : "has"
    case_information }o--|| pdl : "belongs to"

    pdl ||--o{ court_orders : "has"
    court_orders }o--|| pdl : "issued for"

    pdl ||--o{ medical_records : "has"
    medical_records }o--|| pdl : "record for"

    pdl ||--|| physical_characteristics : "has"
    physical_characteristics ||--|| pdl : "describes"

    pdl ||--o{ activity : "participates in"
    activity }o--|| pdl : "involves"

    pdl ||--o{ time_allowances : "receives"
    time_allowances }o--|| pdl : "awarded to"
    personnel ||--o{ time_allowances : "awards"
    time_allowances }o--|| personnel : "awarded by"

    personnel ||--o{ system_notifications : "receives"
    system_notifications }o--|| personnel : "notifies"
    pdl ||--o{ system_notifications : "related to"
    system_notifications }o--|| pdl : "concerns"

    system_notifications ||--o{ system_notifications_read_by : "read by"
    system_notifications_read_by }o--|| system_notifications : "read status for"
    personnel ||--o{ system_notifications_read_by : "has read"
    system_notifications_read_by }o--|| personnel : "read by"

    personnel ||--o{ verifications : "requests"
    verifications }o--|| personnel : "requested by"
    pdl ||--o{ verifications : "subject of"
    verifications }o--|| pdl : "verifies"
    personnel ||--o{ verifications : "reviews"
    verifications }o--|| personnel : "reviewed by"
